compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_constvar_incompatible.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var k : char := 20"

---
ty_nodes:
    Idx::<Type>(0) TyRef(Char)
def_kinds:
    DefId(0) Var(TyRef(Char))
error at 16..18: mismatched types
| note for 8..13: initializer's type is incompatible with this type
