compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_enum_ty_from_type_alias.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "type e : enum(a, b, c)"

---
"a"@(FileId(1), 14..15) [Declared]: enum[DefId(LibraryId(0), LocalDefId(3))] ( "a"@(FileId(1), 14..15), "b"@(FileId(1), 17..18), "c"@(FileId(1), 20..21), )
"b"@(FileId(1), 17..18) [Declared]: enum[DefId(LibraryId(0), LocalDefId(3))] ( "a"@(FileId(1), 14..15), "b"@(FileId(1), 17..18), "c"@(FileId(1), 20..21), )
"c"@(FileId(1), 20..21) [Declared]: enum[DefId(LibraryId(0), LocalDefId(3))] ( "a"@(FileId(1), 14..15), "b"@(FileId(1), 17..18), "c"@(FileId(1), 20..21), )
"e"@(FileId(1), 9..22) [Declared]: <error>
"e"@(FileId(1), 5..6) [Resolved(Type)]: enum[DefId(LibraryId(0), LocalDefId(3))] ( "a"@(FileId(1), 14..15), "b"@(FileId(1), 17..18), "c"@(FileId(1), 20..21), )
"<root>"@(dummy) [Declared]: <error>

