compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_enum_ty_from_var_decl.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "var _ : enum(nice)"

---
"nice"@(FileId(1), 13..17) [Declared]: enum[DefId(LibraryId(0), LocalDefId(1))] ( "nice"@(FileId(1), 13..17), )
"<anonymous>"@(FileId(1), 8..18) [Declared]: <error>
"_"@(FileId(1), 4..5) [Declared]: enum[DefId(LibraryId(0), LocalDefId(1))] ( "nice"@(FileId(1), 13..17), )
"<root>"@(dummy) [Declared]: <error>

