compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_enum_ty_no_variants.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "type e : enum()"

---
"e"@(FileId(1), 9..15) [Declared]: <error>
"e"@(FileId(1), 5..6) [Resolved(Type)]: enum[DefId(LibraryId(0), LocalDefId(0))] ( )
"<root>"@(dummy) [Declared]: <error>

