compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_exit_matching_types.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: loop exit when true end loop
---
"<root>"@(dummy) [Module(No)]: <error>

