compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_exit_no_condition.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: loop exit end loop

---
"<root>"@(dummy) [Declared]: <error>

