compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_for_for_each_not_iterable.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "for : 1 end for"
---
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 6..7: mismatched types
| note in file FileId(1) for 6..7: this is of type `{integer}`
| error in file FileId(1) for 6..7: `{integer}` is not iterable
| info: only arrays types can be iterated over
