compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_for_for_each_unimpl.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "var a : array 1 .. 2 of int\nfor : a end for\n"

---
"a"@(FileId(1), 4..5) [Declared]: array ( range of `int` (Unevaluated(LibraryId(0), BodyId(0)) .. Expr(Unevaluated(LibraryId(0), BodyId(1)), Yes)), ) of int
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 34..35: unsupported operation
| error in file FileId(1) for 34..35: for-each loops are not implemented yet
