compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_for_immut_counter.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "for i : false .. true i := false end for"

---
"i"@(FileId(1), 4..5) [Declared]: ref boolean
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 24..26: cannot assign into expression
| note in file FileId(1) for 22..23: not a reference to a variable
